// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StarDisplay component when rendering a rating of 0 should render correctly 1`] = `
<div>
  <div
    class="starsContainer"
  >
    <img
      alt="Empty star"
      class="starItem"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="17"
      src="/ratings/empty-star.svg"
      style="color: transparent;"
      width="17"
    />
    <img
      alt="Empty star"
      class="starItem"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="17"
      src="/ratings/empty-star.svg"
      style="color: transparent;"
      width="17"
    />
    <img
      alt="Empty star"
      class="starItem"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="17"
      src="/ratings/empty-star.svg"
      style="color: transparent;"
      width="17"
    />
    <img
      alt="Empty star"
      class="starItem"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="17"
      src="/ratings/empty-star.svg"
      style="color: transparent;"
      width="17"
    />
    <img
      alt="Empty star"
      class="starItem"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="17"
      src="/ratings/empty-star.svg"
      style="color: transparent;"
      width="17"
    />
  </div>
</div>
`;

exports[`StarDisplay component when rendering a rating of 5 should render correctly 1`] = `
<div>
  <div
    class="starsContainer"
  >
    <img
      alt="Full star"
      class="starItem"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="17"
      src="/ratings/full-star.svg"
      style="color: transparent;"
      width="17"
    />
    <img
      alt="Full star"
      class="starItem"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="17"
      src="/ratings/full-star.svg"
      style="color: transparent;"
      width="17"
    />
    <img
      alt="Full star"
      class="starItem"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="17"
      src="/ratings/full-star.svg"
      style="color: transparent;"
      width="17"
    />
    <img
      alt="Full star"
      class="starItem"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="17"
      src="/ratings/full-star.svg"
      style="color: transparent;"
      width="17"
    />
    <img
      alt="Full star"
      class="starItem"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="17"
      src="/ratings/full-star.svg"
      style="color: transparent;"
      width="17"
    />
  </div>
</div>
`;

exports[`StarDisplay component when rendering a rating with .3 as decimal part should render correctly 1`] = `
<div>
  <div
    class="starsContainer"
  >
    <img
      alt="Full star"
      class="starItem"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="17"
      src="/ratings/full-star.svg"
      style="color: transparent;"
      width="17"
    />
    <img
      alt="Full star"
      class="starItem"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="17"
      src="/ratings/full-star.svg"
      style="color: transparent;"
      width="17"
    />
    <img
      alt="Half star"
      class="starItem"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="17"
      src="/ratings/half-star.svg"
      style="color: transparent;"
      width="17"
    />
    <img
      alt="Empty star"
      class="starItem"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="17"
      src="/ratings/empty-star.svg"
      style="color: transparent;"
      width="17"
    />
    <img
      alt="Empty star"
      class="starItem"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="17"
      src="/ratings/empty-star.svg"
      style="color: transparent;"
      width="17"
    />
  </div>
</div>
`;

exports[`StarDisplay component when rendering a rating with .5 as decimal part should render correctly 1`] = `
<div>
  <div
    class="starsContainer"
  >
    <img
      alt="Full star"
      class="starItem"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="17"
      src="/ratings/full-star.svg"
      style="color: transparent;"
      width="17"
    />
    <img
      alt="Full star"
      class="starItem"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="17"
      src="/ratings/full-star.svg"
      style="color: transparent;"
      width="17"
    />
    <img
      alt="Full star"
      class="starItem"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="17"
      src="/ratings/full-star.svg"
      style="color: transparent;"
      width="17"
    />
    <img
      alt="Half star"
      class="starItem"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="17"
      src="/ratings/half-star.svg"
      style="color: transparent;"
      width="17"
    />
    <img
      alt="Empty star"
      class="starItem"
      data-nimg="1"
      decoding="async"
      fetchpriority="high"
      height="17"
      src="/ratings/empty-star.svg"
      style="color: transparent;"
      width="17"
    />
  </div>
</div>
`;
